--- a/QuestionService.yml
+++ b/QuestionService.yml
@@ -18,11 +18,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, busrefresh, info
+        include: "*"
   endpoint:
     health:
       probes:
         enabled: true
+    shutdown:
+      access: unrestricted
 
   health:
     readinessstate:
@@ -38,3 +40,14 @@ info:
     name: Question Service
     description: Exposes end-points related to questions
     owner: Ryomen
+
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    metadata-map:
+      zone: defaultZone
