--- a/QuizService.yml
+++ b/QuizService.yml
@@ -19,11 +19,13 @@ management:
   endpoints:
     web:
       exposure:
-        include: refresh, busrefresh, info
+        include: "*"
   endpoint:
     health:
       probes:
         enabled: true
+    shutdown:
+      access: unrestricted
 
   health:
     readinessstate:
@@ -38,6 +40,17 @@ info:
   app-name: Quiz Service
   app-description: Creates quiz
   app-owner: Beast Boy
+
+eureka:
+  client:
+    fetch-registry: true
+    register-with-eureka: true
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+  instance:
+    prefer-ip-address: true
+    metadata-map:
+      zone: defaultZone
 
 question:
   baseUrl:
